// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categories util functions tests getAllCategories test - get categories from many collections 1`] = `
[
  "Tytuł",
  "Tytuł.Podtytuł",
  "Tytuł.Podtytuł.Podpodtytuł",
  "Tytuł.Podtytuł alternatywny",
  "Artyści",
  "Rok",
  "Rok.Miesiąc",
  "Rok.Miesiąc.Dzień",
  "Tytuł.Podtytuł alternatywny 2",
  "Gatunek",
  "Gatunek.Podgatunek",
]
`;

exports[`categories util functions tests getAllCategories test - get categories from one collection 1`] = `
[
  "Tytuł",
  "Tytuł.Podtytuł",
  "Tytuł.Podtytuł.Podpodtytuł",
  "Tytuł.Podtytuł alternatywny",
  "Artyści",
  "Rok",
  "Rok.Miesiąc",
  "Rok.Miesiąc.Dzień",
]
`;
